--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@
   --nav-hover-color: #2c2e30;
   --nav-toggler-color: #7e8085;
   --primary-color: #565656;
-  --primary-color-2: #7c4fe0;
+  --primary-color-2: #0D39FF;
   --secondary-color: #666;
   --secondary-color-2: #777;
   --social-color-1: #3b5999;
@@ -96,7 +96,7 @@
   --valid-color: #28a745;
   --invalid-color: #ffa200;
   --primary-bg-color: #f6f9fe;
-  --primary-bg-color-2: linear-gradient(-47deg, #8731E8 0%, #4528DC 100%);
+  --primary-bg-color-2: linear-gradient(-47deg, #0D39FF 0%, #0062bd 100%);
   --primary-bg-color-3: #ffffff;
   --primary-bg-color-4: rgba(16, 16, 45, 1);
   --nav-bg-color: #d3d3d3;
